--- a/Compenergy/app/src/main/res/values/strings.xml
+++ b/Compenergy/app/src/main/res/values/strings.xml
@@ -7,4 +7,14 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="navigation_drawer_header_text">Select an option from the menu</string>
+    <string name="navigation_second_group_title">More</string>
+
+    <string name="nav_item_compare">Compare</string>
+    <string name="nav_item_data">Data</string>
+    <string name="nav_item_add_data">Add Data</string>
+    <string name="nav_item_favorites">Favorites</string>
+    <string name="nav_item_categories">Categories</string>
+    <string name="nav_item_settings">Settings</string>
+    <string name="nav_item_about">About</string>
+    <string name="nav_item_help">Help</string>
 </resources>
