--- a/Compenergy/app/src/main/res/values/strings.xml
+++ b/Compenergy/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="nav_item_add_data">Add Data</string>
     <string name="nav_item_favorites">Favorites</string>
     <string name="nav_item_categories">Categories</string>
+    <string name="nav_item_submit_data">Submit Data</string>
     <string name="nav_item_settings">Settings</string>
     <string name="nav_item_about">About</string>
     <string name="nav_item_help">Help</string>
