Added fragments for every page of the application

--- a/Compenergy/app/src/main/res/values/strings.xml
+++ b/Compenergy/app/src/main/res/values/strings.xml
@@ -3,16 +3,13 @@
     <!-- Basic information about the app -->
     <string name="app_name">Compenergy</string>
 
-    <!-- Fragment Titles -->
-    <string name="fragment_compare_title">Compare</string>
-    <string name="fragment_data_title">Data</string>
-
     <!-- Navigation drawer -->
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="navigation_drawer_header_text">Select an option from the menu</string>
     <string name="navigation_second_group_title">More</string>
 
+    <!-- Titles -->
     <string name="nav_item_compare">Compare</string>
     <string name="nav_item_data">Data</string>
     <string name="nav_item_add_data">Add Data</string>
