--- a/Compenergy/app/src/main/res/values/strings.xml
+++ b/Compenergy/app/src/main/res/values/strings.xml
@@ -19,4 +19,14 @@
     <string name="nav_item_settings">Settings</string>
     <string name="nav_item_about">About</string>
     <string name="nav_item_help">Help</string>
+
+    <!-- Preference screen strings -->
+    <string name="pref_database_group_title">Database</string>
+    <string name="pref_database_group_title_key">compenergy.database.title</string>
+    <string name="pref_database_reset_button">Reset database</string>
+    <string name="pref_database_reset_summary">Resets all data to the default values and removes custom data sets</string>
+    <string name="pref_database_reset_key">compenergy.database.reset</string>
+    <string name="pref_database_delete_button">Delete all data</string>
+    <string name="pref_database_delete_summary">Deletes every dataset and leaves you with an empty database</string>
+    <string name="pref_database_delete_key">compenergy.database.delete</string>
 </resources>
