Added XML Parser for a default database XML File which fills the database with every reset

--- a/Compenergy/app/src/main/res/values/strings.xml
+++ b/Compenergy/app/src/main/res/values/strings.xml
@@ -31,4 +31,7 @@
     <string name="pref_database_delete_key">compenergy.database.delete</string>
     <string name="pref_database_hint_reset">Database reset successful</string>
     <string name="pref_database_hint_delete">All data deleted</string>
+
+    <!-- About screen -->
+    <string name="about_title_app_name">App Name:</string>
 </resources>
