Added real data to database and added functionality to minimize certain categories in the data list view, but it still needs a lot more functionality

--- a/Compenergy/app/src/main/res/values/strings.xml
+++ b/Compenergy/app/src/main/res/values/strings.xml
@@ -41,4 +41,7 @@
     <!-- Placeholders -->
     <string name="placeholder_item_listview">Item Name</string>
     <string name="placeholder_header_listview">Header</string>
+
+    <!-- Content Descriptions -->
+    <string name="content_description_list_view_header">Minimize or maximize this category</string>
 </resources>
