Added functionality to add Consumption by distance in the "Add Data" Fragment

--- a/Compenergy/app/src/main/res/values/strings.xml
+++ b/Compenergy/app/src/main/res/values/strings.xml
@@ -118,7 +118,9 @@
 
     <string-array name="unit_list_distance">
         <item>Nanometre</item>
+        <item>Micrometre</item>
         <item>Millimetre</item>
+        <item>Centimetre</item>
         <item>Metre</item>
         <item>Kilometre</item>
         <item>Mile</item>
