Added Kilo- and Megawatt to the selections when adding data

--- a/Compenergy/app/src/main/res/values/strings.xml
+++ b/Compenergy/app/src/main/res/values/strings.xml
@@ -52,6 +52,8 @@
 
     <string-array name="spinner_energy_type_electric">
         <item>Watt</item>
+        <item>Kilowatt</item>
+        <item>Megawatt</item>
     </string-array>
 
     <!-- Energy density: https://en.wikipedia.org/wiki/Fuel#Energy -->
