--- a/Compenergy/app/src/main/res/values/strings.xml
+++ b/Compenergy/app/src/main/res/values/strings.xml
@@ -153,6 +153,7 @@
     <string name="pref_database_delete_summary">Deletes every dataset and leaves you with an empty database</string>
     <string name="pref_database_delete_key">compenergy.database.delete</string>
     <string name="pref_database_hint_reset">Database reset successful</string>
+    <string name="pref_database_hint_reset_failed">Database reset failed</string>
     <string name="pref_database_hint_delete">All data deleted</string>
 
     <!-- Error messages -->
