--- a/Compenergy/app/src/main/res/values/strings.xml
+++ b/Compenergy/app/src/main/res/values/strings.xml
@@ -227,13 +227,17 @@
     <string name="placeholder_test_item_1_name">BMW M4 (2017)</string>
     <string name="placeholder_test_item_1_energy">287.28 MJ</string>
     <string name="placeholder_test_item_1_unit">on 100 km</string>
-
+    <string name="placeholder_test_item_1_compare_value">3107</string>
+    <string name="placeholder_test_item_1_compare_unit">kilometre</string>
     <string name="placeholder_test_item_2_name">Worlds solar power capacity</string>
     <string name="placeholder_test_item_2_energy">256 GW</string>
     <string name="placeholder_test_item_2_unit">power capacity</string>
+    <string name="placeholder_test_item_2_compare_value">34.8664</string>
+    <string name="placeholder_test_item_2_compare_unit">milliseconds</string>
 
     <!-- Content Descriptions -->
     <string name="content_description_list_view_header">Minimize or maximize this category</string>
     <string name="content_description_nav_drawer_icon">Application icon</string>
     <string name="content_description_compare_color_bucket">Change the item color</string>
+    <string name="content_description_compare_arrows">Compare items</string>
 </resources>
