--- a/Compenergy/app/src/main/res/values/strings.xml
+++ b/Compenergy/app/src/main/res/values/strings.xml
@@ -154,6 +154,10 @@
     <string name="com_percentage">percentage</string>
     <string name="com_times_larger">times larger</string>
     <string name="com_time">time</string>
+    <string name="com_seconds">seconds</string>
+    <string name="com_minutes">minutes</string>
+    <string name="com_hours">hours</string>
+    <string name="com_days">days</string>
 
     <!-- Data Fragment -->
     <string name="data_search_hint">Search for an item…</string>
