--- a/Compenergy/app/src/main/res/values/strings.xml
+++ b/Compenergy/app/src/main/res/values/strings.xml
@@ -254,4 +254,7 @@
     <!-- Comparison strings -->
     <string name="compare_capacity_capacity_larger">times bigger</string>
     <string name="compare_capacity_capacity_smaller">percentage</string>
+
+    <!-- Help text -->
+    <string name="help_text"><b>1. This is the help</b>\n\nHere is some random placeholder text</string>
 </resources>
