Added comparison logic for electric producer <=> mass energy content

--- a/Compenergy/app/src/main/res/values/strings.xml
+++ b/Compenergy/app/src/main/res/values/strings.xml
@@ -159,6 +159,7 @@
     <string name="com_hours">hours</string>
     <string name="com_days">days</string>
     <string name="com_km">kilometre</string>
+    <string name="com_kg">kilogram</string>
 
     <!-- Data Fragment -->
     <string name="data_search_hint">Search for an item…</string>
