--- a/Compenergy/app/src/main/res/values/strings.xml
+++ b/Compenergy/app/src/main/res/values/strings.xml
@@ -216,6 +216,12 @@
     <string name="name_already_exists">Name already exists</string>
     <string name="invalid_input">Invalid input</string>
 
+    <!-- Keys -->
+    <string name="key_upper">compenergy.compare.upper_item</string>
+    <string name="key_lower">compenergy.compare.lower_item</string>
+    <string name="key_comp_upper">compenergy.compare.upper_compare_value</string>
+    <string name="key_comp_lower">compenergy.compare.lower_compare_value</string>
+
     <!-- Dialog messages -->
     <string name="dialog_yes">Yes</string>
     <string name="dialog_no">No</string>
