Added logic to fill the spinner with the units when opening the change value dialog

--- a/Compenergy/app/src/main/res/values/strings.xml
+++ b/Compenergy/app/src/main/res/values/strings.xml
@@ -77,18 +77,11 @@
     </string-array>
 
     <string-array name="unit_list_time">
-        <item>Nanosecond</item>
-        <item>Microsecond</item>
-        <item>Millisecond</item>
-        <item>Second</item>
-        <item>Minute</item>
-        <item>Hour</item>
-        <item>Day</item>
-        <item>Week</item>
-        <item>Month</item>
-        <item>Year</item>
-        <item>Decade</item>
-        <item>Century</item>
+        <item>Seconds</item>
+        <item>Minutes</item>
+        <item>Hours</item>
+        <item>Days</item>
+        <item>Years</item>
     </string-array>
 
     <string-array name="unit_list_volume">
