Added the JavaMail API using Gmail auth to send custom data to the developer. Still needs to do content for fragment and the data for the email

--- a/Compenergy/app/src/main/res/values/strings.xml
+++ b/Compenergy/app/src/main/res/values/strings.xml
@@ -253,7 +253,7 @@
     <string name="about_contact_value">compenergy.app@googlemail.com</string>
     <string name="about_app_version_title">Version</string>
     <string name="about_app_build_title">Build Number</string>
-    <string name="about_database_version">Default Database Version</string>
+    <string name="about_database_version">Database Version</string>
 
     <!-- Placeholders -->
     <string name="placeholder_item_listview">Item Name</string>
